# windows_shared_memory

./: .gitignore  Cargo.toml  LICENSE  readme.md  test_cross_arch.ps1
examples/: client.rs  server.rs
src/: client.rs  lib.rs  server.rs  shared_memory.rs  skima.rs  utils.rs
tests/: test1.rs
