[package]
name = "windows_shared_memory"
version = "0.1.3"
edition = "2024"
authors = ["gembleman"]
description = "A Rust library for working with shared memory on Windows systems"
repository = "https://github.com/gembleman/windows_shared_memory.git"
license = "MIT"
keywords = ["windows", "shared-memory", "ipc"]
categories = ["os::windows-apis", "memory-management"]

[dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
] }
